--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ten years, one night | Otovo Special Event</title>
     <meta
       name="description"
-      content="One-night Otovo Special Event in downtown Oslo on March 5, 2026 at 18:00 for alumni from Norway and Sweden."
+      content="One-night Otovo reunion in downtown Oslo on March 5, 2026 at 18:00 for alumni from Norway and Sweden."
     />
     <link rel="stylesheet" href="./styles.css" />
     <script src="./main.js" defer></script>
@@ -20,8 +20,7 @@
           <a href="#about">What this is</a>
           <a href="#timeline">Plan</a>
         </nav>
-        <a class="button button-primary button-md header-cta" href="#rsvp"
-        >Count me in</a>
+
       </div>
     </header>
 
@@ -44,8 +43,7 @@
               </h1>
 
               <p class="reveal hero-lead" style="--reveal-delay: 220ms">
-                An exclusive reunion for everyone who built Otovo in Norway and
-                Sweden.
+                A reunion for everyone who built Otovo in Norway and Sweden.
               </p>
 
               <div
@@ -56,21 +54,18 @@
               </div>
 
               <p class="reveal hero-copy" style="--reveal-delay: 380ms">
-                This page is the practical version of the WhatsApp chaos. On 5
-                March we meet in downtown Oslo to mark 10 years of Otovo and
-                catch up with people we haven't seen in ages.
+                This is the practical version of the WhatsApp chaos. On 5 March
+                we meet downtown to mark 10 years of Otovo and see people we
+                haven't seen in ages.
               </p>
 
               <p class="reveal hero-copy" style="--reveal-delay: 500ms">
-                No big ceremony, no corporate deck, just food, drinks, old
-                stories, and familiar faces. Taco-sombreros like in 2016 are
-                still not guaranteed.
+                Easy snacks, drinks, old stories, and familiar faces. Low-key,
+                high on people.
               </p>
 
               <div class="reveal hero-actions" style="--reveal-delay: 620ms">
                 <a class="button button-primary button-lg" href="#rsvp">RSVP</a>
-                <a class="button button-secondary button-lg" href="#timeline"
-                >Evening plan</a>
               </div>
 
               <dl class="hero-highlights">
@@ -94,9 +89,9 @@
                       />
                     </svg>
                     <div>
-                      <dt class="highlight-title">Founders' special event</dt>
+                      <dt class="highlight-title">Otovo alumni night</dt>
                       <dd class="highlight-detail">
-                        A 10-year celebration for everyone who built the NO + SE
+                        A 10-year reunion for everyone who built the NO + SE
                         chapters.
                       </dd>
                       <div class="highlight-line" aria-hidden="true"></div>
@@ -137,10 +132,10 @@
                       />
                     </svg>
                     <div>
-                      <dt class="highlight-title">Reconnecting</dt>
+                      <dt class="highlight-title">Reconnect</dt>
                       <dd class="highlight-detail">
-                        Catch up with old teammates from Norway and Sweden who
-                        shared the wild years.
+                        Catch up with teammates, partners, and Slack-only
+                        legends.
                       </dd>
                       <div class="highlight-line" aria-hidden="true"></div>
                     </div>
@@ -174,10 +169,9 @@
                       />
                     </svg>
                     <div>
-                      <dt class="highlight-title">One crowded room</dt>
+                      <dt class="highlight-title">Downtown Oslo</dt>
                       <dd class="highlight-detail">
-                        Giving the Oslo crew at least one packed evening this
-                        year.
+                        One packed room, one proper night out.
                       </dd>
                       <div class="highlight-line" aria-hidden="true"></div>
                     </div>
@@ -190,20 +184,18 @@
               <h2>What this night is about</h2>
               <ul>
                 <li>
-                  Founders' 10-year event for everyone with Otovo history in
-                  Norway and Sweden.
+                  A one-night reunion for Otovo alumni from Norway and Sweden.
                 </li>
                 <li>
-                  Seeing old teammates, swapping stories, and saying hi to
-                  people you only know from old Slack channels.
+                  Seeing familiar faces and meeting people you only knew by
+                  avatar.
                 </li>
                 <li>
-                  Celebrating that we made it this far, without pretending
-                  anyone can forecast the next 10 years.
+                  Celebrating the last 10 years, and a toast to whatever's next.
                 </li>
               </ul>
               <p class="hero-note">
-                Exact venue details stay in the WhatsApp group.
+                Exact venue drops in WhatsApp.
               </p>
               <div class="hero-meta">
                 <p class="hero-meta-label">When &amp; where</p>
@@ -250,7 +242,8 @@
               />
               <div class="hero-image-caption">
                 <p>
-                  Archive gems are loading. Some legends from 2019 may appear.
+                  Collecting gems from the archives. Some legends from 2019 may
+                  appear.
                 </p>
               </div>
             </div>
@@ -269,8 +262,8 @@
             >
             </div>
             <p class="reveal section-lead" style="--reveal-delay: 220ms">
-              Loose plan, on purpose. Final venue details and last-minute
-              updates are shared in WhatsApp.
+              Loose plan, on purpose. Venue and last-minute updates drop in
+              WhatsApp.
             </p>
 
             <div class="timeline-list">
@@ -283,8 +276,8 @@
                   <h3>Doors open</h3>
                 </div>
                 <p>
-                  Grab a drink, find familiar faces, and start the "long time no
-                  see" lap.
+                  Grab a drink, grab a snack, do the "long time no see" lap,
+                  repeat.
                 </p>
               </article>
 
@@ -294,10 +287,10 @@
               >
                 <div class="timeline-head">
                   <p class="timeline-time">18:30</p>
-                  <h3>Short welcome</h3>
+                  <h3>Welcome speech</h3>
                 </div>
                 <p>
-                  Quick words from the founders, then straight back to mingling.
+                  A quick hello from the founders to open the night.
                 </p>
               </article>
 
@@ -307,9 +300,9 @@
               >
                 <div class="timeline-head">
                   <p class="timeline-time">19:00</p>
-                  <h3>Food, drinks, and catching up</h3>
+                  <h3>Otovo timeline</h3>
                 </div>
-                <p>No formal seating plan. Just eat, talk, and reconnect.</p>
+                <p>A short trip down memory lane, then back to catching up.</p>
               </article>
 
               <article
@@ -318,11 +311,11 @@
               >
                 <div class="timeline-head">
                   <p class="timeline-time">20:30</p>
-                  <h3>Archive drop</h3>
+                  <h3>Open mic</h3>
                 </div>
                 <p>
-                  Photos and stories from the years when everything happened at
-                  once.
+                  Share what you've been building since Otovo: spin-offs,
+                  startups, surprises.
                 </p>
               </article>
 
@@ -332,9 +325,11 @@
               >
                 <div class="timeline-head">
                   <p class="timeline-time">21:00 - late</p>
-                  <h3>Party mode</h3>
+                  <h3>
+                    Party mode <img width="auto" style="vertical-align: middle;" height="20" src="./toreng-tekno.gif" alt="Toreng tekno" />
+                  </h3>
                 </div>
-                <p>Stay for one drink or stay late. Both are valid.</p>
+                <p>Stay for one drink or stay late. Both are perfect.</p>
               </article>
             </div>
           </div>
@@ -425,7 +420,7 @@
               </div>
             </dl>
             <p class="practical-note">
-              Taco-sombreros from 2016 are still not guaranteed.
+              Taco-sombreros from 2016 are still not guaranteed 🌮
             </p>
           </aside>
         </div>
@@ -474,7 +469,7 @@
                 <span>Attendance</span>
                 <select required name="attendance">
                   <option value="" selected disabled>Pick one</option>
-                  <option value="Yes, I am in">Yes, I am in</option>
+                  <option value="Yes, I am in">Yes, I am in!</option>
                   <option value="Maybe, still sorting logistics">
                     Maybe, still sorting logistics
                   </option>
@@ -517,7 +512,7 @@
             </form>
 
             <p id="rsvp-success" class="rsvp-success" hidden>
-              Thanks. If your email app didn't open, drop the same info in
+              Thanks! If your email app didn't open, drop the same info in
               WhatsApp and we'll register you manually.
             </p>
           </div>
@@ -528,15 +523,19 @@
               <div>
                 <dt>Who is invited?</dt>
                 <dd>
-                  Everyone with Otovo history in Norway and Sweden, current or
-                  former.
+                  Otovo alumni connected to Norway and Sweden, past or present.
                 </dd>
               </div>
               <div>
-                <dt>I no longer live in NO/SE. Can I still come?</dt>
+                <dt>Where is it?</dt>
                 <dd>
-                  Yes. If you were part of those teams and can make it to Oslo,
-                  you are welcome.
+                  Downtown Oslo. Exact venue drops in WhatsApp.
+                </dd>
+              </div>
+              <div>
+                <dt>What should I expect?</dt>
+                <dd>
+                  Snacks, drinks, a welcome speech, and lots of catching up.
                 </dd>
               </div>
               <div>
@@ -547,16 +546,9 @@
                 </dd>
               </div>
               <div>
-                <dt>What should I wear?</dt>
+                <dt>How do I RSVP if I'm not sure yet?</dt>
                 <dd>
-                  Whatever feels like you. Think evening out, not annual report.
-                </dd>
-              </div>
-              <div>
-                <dt>What if I am not sure yet?</dt>
-                <dd>
-                  Pick "Maybe". You can update later in WhatsApp when plans are
-                  clearer.
+                  Pick "Maybe" in the form. You can update later in WhatsApp.
                 </dd>
               </div>
             </dl>
