--- a/index.html
+++ b/index.html
@@ -429,11 +429,90 @@
       <section id="rsvp" class="section">
         <div class="container two-col">
           <div class="rsvp-card">
-            <h2 id="rsvp-title" class="section-title">RSVP</h2>
+            <div
+              class="rsvp-head"
+              style="display: flex; align-items: center; gap: 1rem; justify-content: space-between;"
+            >
+              <h2 id="rsvp-title" class="section-title">RSVP</h2>
+              <div
+                class="rsvp-teaser"
+                style="display: flex; flex-direction: column; align-items: flex-end; gap: 0.35rem; margin-left: auto;"
+              >
+                <div
+                  class="avatar-stack"
+                  style="display: flex; align-items: center; padding-left: 0.25rem;"
+                >
+                  <span
+                    style="width: 36px; height: 36px; border-radius: 999px; overflow: hidden; border: 1px solid var(--color-neutral-40); background: var(--color-neutral-40);"
+                  >
+                    <img
+                      src="at.jpg"
+                      alt=""
+                      style="width: 100%; height: 100%; object-fit: cover; filter: blur(1px);"
+                    />
+                  </span>
+                  <span
+                    style="width: 36px; height: 36px; border-radius: 999px; overflow: hidden; border: 1px solid var(--color-neutral-40); background: var(--color-neutral-40);margin-left: -10px;"
+                  >
+                    <img
+                      src="simen.jpg"
+                      alt=""
+                      style="width: 100%; height: 100%; object-fit: cover; filter: blur(1px);"
+                    />
+                  </span>
+                  <span
+                    style="width: 36px; height: 36px; border-radius: 999px; overflow: hidden; border: 1px solid var(--color-neutral-40); background: var(--color-neutral-40);margin-left: -10px;"
+                  >
+                    <img
+                      src="andreben.jpg"
+                      alt=""
+                      style="width: 100%; height: 100%; object-fit: cover; filter: blur(1px);"
+                    />
+                  </span>
+                  <span
+                    style="width: 36px; height: 36px; border-radius: 999px; overflow: hidden; border: 1px solid var(--color-neutral-40); background: var(--color-neutral-40); margin-left: -10px;"
+                  >
+                    <img
+                      src="lasy.jpg"
+                      alt=""
+                      style="width: 100%; height: 100%; object-fit: cover; filter: blur(1px);"
+                    />
+                  </span>
+                  <span
+                    style="width: 36px; height: 36px; border-radius: 999px; overflow: hidden; border: 1px solid var(--color-neutral-40); background: var(--color-neutral-40); margin-left: -10px;"
+                  >
+                    <img
+                      src="andrroy.jpg"
+                      alt=""
+                      style="width: 100%; height: 100%; object-fit: cover; filter: blur(1px);"
+                    />
+                  </span>
+                  <span
+                    style="width: 36px; height: 36px; border-radius: 999px; overflow: hidden; border: 1px solid var(--color-neutral-40); background: var(--color-neutral-40); margin-left: -10px;"
+                  >
+                    <img
+                      src="idagr.jpg"
+                      alt=""
+                      style="width: 100%; height: 100%; object-fit: cover; filter: blur(1px);"
+                    />
+                  </span>
+                  <span
+                    aria-hidden="true"
+                    style="z-index: 10; width: 36px; height: 36px; border-radius: 999px; display: inline-flex; align-items: center; justify-content: center; margin-left: -3px; color: var(--color-neutral-30); font-size: 0.85rem; font-weight: 600;"
+                  >++</span>
+                </div>
+                <p
+                  style="margin: 0; color: var(--color-neutral-40); font-size: 0.85rem;"
+                >
+                  Register to see everyone attending.
+                </p>
+              </div>
+            </div>
             <p class="section-lead">
               Help us size food and space. Fill this out once and we'll open a
               prefilled email.
             </p>
+
 
             <form id="rsvp-form" class="rsvp-form">
               <label>
