--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       <section id="timeline" class="section">
         <div class="container two-col">
           <div>
-            <h2 class="reveal section-title">Evening Plan</h2>
+            <h2 class="reveal section-title">Ten Years, In One Night</h2>
             <div
               class="reveal section-divider"
               style="--reveal-delay: 120ms"
@@ -287,7 +287,7 @@
               >
                 <div class="timeline-head">
                   <p class="timeline-time">18:30</p>
-                  <h3>Welcome speech</h3>
+                  <h3>Welcome</h3>
                 </div>
                 <p>
                   A quick hello from the founders to open the night.
@@ -300,7 +300,7 @@
               >
                 <div class="timeline-head">
                   <p class="timeline-time">19:00</p>
-                  <h3>Otovo timeline</h3>
+                  <h3>The Otovo Saga</h3>
                 </div>
                 <p>A short trip down memory lane, then back to catching up.</p>
               </article>
@@ -311,7 +311,7 @@
               >
                 <div class="timeline-head">
                   <p class="timeline-time">20:30</p>
-                  <h3>Open mic</h3>
+                  <h3>Life on the other side: Open mic</h3>
                 </div>
                 <p>
                   Share what you've been building since Otovo: spin-offs,
