--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="One-night Otovo reunion in downtown Oslo on March 5, 2026 at 18:00 for alumni from Norway and Sweden."
     />
     <link rel="stylesheet" href="./styles.css" />
+
     <script src="./main.js" defer></script>
   </head>
   <body>
@@ -311,11 +312,11 @@
               >
                 <div class="timeline-head">
                   <p class="timeline-time">20:30</p>
-                  <h3>Life on the other side: Open mic</h3>
+                  <h3>Life on the other side: Stories</h3>
                 </div>
                 <p>
-                  Share what you've been building since Otovo: spin-offs,
-                  startups, surprises.
+                  A few handpicked updates on what people have been building
+                  since Otovo.
                 </p>
               </article>
 
@@ -439,6 +440,7 @@
                 style="display: flex; flex-direction: column; align-items: flex-end; gap: 0.35rem; margin-left: auto;"
               >
                 <div
+                  id="avatar-stack"
                   class="avatar-stack"
                   style="display: flex; align-items: center; padding-left: 0.25rem;"
                 >
@@ -502,6 +504,7 @@
                   >++</span>
                 </div>
                 <p
+                  id="rsvp-teaser-text"
                   style="margin: 0; color: var(--color-neutral-40); font-size: 0.85rem;"
                 >
                   Register to see everyone attending.
@@ -509,8 +512,7 @@
               </div>
             </div>
             <p class="section-lead">
-              Help us size food and space. Fill this out once and we'll open a
-              prefilled email.
+              Help us size food and space. Takes 30 seconds.
             </p>
 
 
@@ -546,34 +548,61 @@
               </label>
               <div class="span-2">
                 <span>Attendance</span>
-                <div
-                  class="rsvp-radio-group"
-                  style="display: grid; gap: 0.6rem; margin-top: 0.4rem;"
-                >
-                  <label style="display: flex; align-items: center; gap: 0.6rem;">
+                <div class="rsvp-radio-group rsvp-radio-cards">
+                  <label class="rsvp-radio-card">
                     <input
                       required
                       type="radio"
                       name="attendance"
                       value="Yes, I am in!"
                     />
-                    Yes, I am in!
+                    <span class="rsvp-radio-title">Yes, I am in!</span>
+                    <span class="rsvp-radio-subtitle">See you there.</span>
+                    <span class="rsvp-radio-icon" aria-hidden="true">
+                      <svg viewBox="0 0 20 20" fill="currentColor">
+                        <path
+                          d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16Zm3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089l4-5.5Z"
+                          clip-rule="evenodd"
+                          fill-rule="evenodd"
+                        />
+                      </svg>
+                    </span>
                   </label>
-                  <label style="display: flex; align-items: center; gap: 0.6rem;">
+                  <label class="rsvp-radio-card">
                     <input
                       type="radio"
                       name="attendance"
                       value="Maybe, still sorting logistics"
                     />
-                    Maybe, still sorting logistics
+                    <span class="rsvp-radio-title">Maybe</span>
+                    <span class="rsvp-radio-subtitle">Still sorting logistics.</span>
+                    <span class="rsvp-radio-icon" aria-hidden="true">
+                      <svg viewBox="0 0 20 20" fill="currentColor">
+                        <path
+                          d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16Zm3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089l4-5.5Z"
+                          clip-rule="evenodd"
+                          fill-rule="evenodd"
+                        />
+                      </svg>
+                    </span>
                   </label>
-                  <label style="display: flex; align-items: center; gap: 0.6rem;">
+                  <label class="rsvp-radio-card">
                     <input
                       type="radio"
                       name="attendance"
                       value="Sorry, cannot make it"
                     />
-                    Sorry, cannot make it
+                    <span class="rsvp-radio-title">I'll wait 10 more years</span>
+                    <span class="rsvp-radio-subtitle">Won’t make it.</span>
+                    <span class="rsvp-radio-icon" aria-hidden="true">
+                      <svg viewBox="0 0 20 20" fill="currentColor">
+                        <path
+                          d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16Zm3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089l4-5.5Z"
+                          clip-rule="evenodd"
+                          fill-rule="evenodd"
+                        />
+                      </svg>
+                    </span>
                   </label>
                 </div>
               </div>
@@ -594,10 +623,6 @@
               </div>
             </form>
 
-            <p id="rsvp-success" class="rsvp-success" hidden>
-              Thanks! You're on the list. If this didn't work, drop the same info
-              in WhatsApp and we'll register you manually.
-            </p>
           </div>
 
           <aside id="faq" class="faq-card">
