--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
               </div>
 
               <p class="reveal hero-copy" style="--reveal-delay: 220ms">
-                This is the practical version of the WhatsApp chaos. On 5 March
-                we meet downtown to mark 10 years of Otovo and see people we
+                On 5 March we meet downtown to mark 10 years of Otovo and see people we
                 haven't seen in ages.
               </p>
 
